Fix spacing

--- a/main.css
+++ b/main.css
@@ -285,7 +285,7 @@ body {
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
-    width: 500px;
+    /* width: 500px; */
 
     .decorator {
       width: clamp( 40px, 8vw, 80px );
@@ -322,7 +322,7 @@ body {
     flex-wrap: wrap;
     gap: 4vw;
     margin-top: max( 4vw, 2rem );
-    padding: 2rem 4rem;
+    padding: 2rem max( 4vw, 2rem );
 
     h3 {
       margin-bottom: max( 1vw, 1rem );
@@ -346,7 +346,7 @@ body {
       flex-direction: column;
       justify-content: center;
       flex: 1.2;
-      min-width: 400px;
+      width: 400px;
 
       .description {
         font-size: clamp( 1rem, 1.6vw, 1.4rem );
@@ -397,6 +397,7 @@ body {
       }
 
       .content {
+        min-width: 100%;
 
         .description {
           text-align: right
@@ -544,8 +545,6 @@ body {
 
   #about_me {
     flex-direction: column;
-    height: auto;
-    width: 100vw;
     padding: 2rem;
 
     p {
@@ -555,11 +554,7 @@ body {
 
     .decorator-box {
       flex-direction: row;
-      height: 80px;
-
-      .decorator:nth-child(even) {
-
-      }
+      height: 80px
     }
   }
 
@@ -567,7 +562,7 @@ body {
 
     .project {
       .content {
-        min-width: 100%;
+        width: 100%;
 
         .links {
           a {
